2009-04-30  Sander van Dijk  <sgvandijk@gmail.com>

	* rcssmonitor3d/rcssmonitor3d.rb
	- set camera parameters to those used in internal monitor
	
	* plugin/soccermonitor/soccerinputlogplayer.h
	* plugin/soccermonitor/soccerinputlogplayer.cpp
	* rcssmonitor3d/soccerbindings.rb
	- add camera controls to external monitor

2009-04-08  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/soccer/beameffector/beamaction.h (BeamAction): 
	- fixed const function declaration
	
	* plugin/soccer/soccerbase/soccerbase.cpp (SoccerBase::MoveAgent): 
	- removed useless statements
	
	* plugin/soccer/kickeffector/kickaction.h: 
	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp:
	- fixed variables order in ctor
	 
	* plugin/soccer/visionperceptor/visionperceptor.h: 
	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.h:
	- added missing return statement 

2009-03-05  Hedayat Vatankhah  <hedayat@grad.com>

	* linux/rcssserver3d.desktop:
	- updated the icon name
	 
	* data/logos/simspark.png:
	* data/logos/simsparklogo.png:
	* data/logos/simsparklogo2.png:
	- added simspark logos created by Joschka, and a 48x48 version of
	  simsparklogo.png which can be used as an icon

2009-02-09  Hedayat Vatankhah  <hedayat@grad.com>

	* doc/users/user-manual.tex: 
	* doc/users/simspark.tex: 
	* doc/users/rcssmonitor3d.tex: 
	* doc/users/introduction.tex: 
	* doc/users/gettingstarted.tex: 
	* doc/users/definitions.tex: 
	* doc/users/CMakeLists.txt: 
	* doc/TEXT_INSTEAD_OF_A_MANUAL.txt:
	- monitorspark -> rcssmonitor3d
	- Say effector message lenght limit is 20 characters now
	- Updated some info about RestrictedVisionPerceptor

2009-01-29  Hedayat Vatankhah  <hedayat@grad.com>

	* INSTALL: 
	- added requirements
	
	* README: 
	- updated with the recent changes

2009-01-28  Hedayat Vatankhah  <hedayat@grad.com>

	* INSTALL: 
	- added new installation instructions (cmake oriented)
	
	* data/rsg/agent/nao/nao.rsg: 
	- disable VisionPerceptor
	
	* data/rsg/agent/nao/naoneckhead.rsg: 